# AST_AI_Interface

./: .gitignore  ARCHITECT_CHANGE_SUMMARY.md  ARCHITECT_FIXES.md  AUDITOR_REPORT.md  CHANGELOG.md  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_REPORT.md  CODE_REVIEW_TASK.md  DEEP_CLEANUP_REPORT.md  ECHARTS_IMPLEMENTATION_REPORT.md  ECHARTS_PHASE1_VERIFICATION.md  FILE_GRAPH_IMPLEMENTATION.md  FIX_SUMMARY.md  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.txt  INSTALL.md  LAYERED_ARCHITECTURE_REPORT.md  PHASE1_IMPLEMENTATION_REPORT.md  PHASE2_COMPLETE.md  PHASE2_REPORT.md  PHASE3_REPORT.md  PLAN.md  PLAN_ARGUMENTS_SUPPORT.md  PLAN_FILTER.md  PLAN_FILTER_CFG.md  PLAN_GENERIC.md  QUICK_START.md  README.md  REQUIREMENTS.md  REQUIREMENTS_FILTER_CFG.md  REQUIREMENTS_GENERIC.md  SCRIPT_CLEANUP_REPORT.md  SYSTEM_OPTIMIZATION_REPORT.md  USAGE.md  audit_report.json  callgraph.html  callgraph.json  callgraph.m_mermaid.md  callgraph1.html  (+53 more)
.direnv/: nix-profile-25.11-f640ps0hcp7w5jzg  nix-profile-25.11-f640ps0hcp7w5jzg.rc
docs/: ARCHITECTURE_ANALYSIS.md  FIX_PLAN.md  filter_exact_match_design.md  filter_fuzzy_match_design.md  graph_filter_design.md
src/: __init__.py  adaptive_flag_parser.py  ast_parser.py  call_analyzer.py  cli.py  cli.py.backup  compilation_db.py  compilation_db_filter.py  compile_commands_simplifier.py  doxygen_parser.py  echarts_generator.py  echarts_templates.py  feature_analyzer.py  file_graph_generator.py  filter_config.py  flag_filter_manager.py  flag_whitelist.py  function_extractor.py  function_registry.py  graph_filter.py  (+4 more)
(+15 files in other folders)
