[project]
name = "clang-call-analyzer"
version = "1.0.0"
description = "C/C++ function call analyzer with Doxygen support"
requires-python = ">=3.8"
dependencies = [
    "clang>=16.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
